--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,14 +1,14 @@
 [defaults]
-inventory=/root/Ansible/inventory
-remote_user=admin
-roles_path=/root/Ansible/roles
-collections_path=/root/Ansible/mycollection
-ask_pass=false
-host_key_checking=false
+inventory = /Ansible/inventory
+remote_user = admin
+roles_path = /Ansible/roles
+collections_path = /Ansible/mycollection
+ask_pass = false
+host_key_checking = false
 
 [privilege_escalation]
-become=true
-become_method=sudo
-become_user=root
-become_ask_pass=false
+become = true
+become_method = sudo
+become_user = root
+become_ask_pass = false
 
