--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,8 +1,8 @@
 [defaults]
-inventory = /Ansible/inventory
+inventory = /root/Ansible/inventory
 remote_user = admin
-roles_path = /Ansible/roles
-collections_path = /Ansible/mycollection
+roles_path = /root/Ansible/roles
+collections_path = /root/Ansible/mycollection
 ask_pass = false
 host_key_checking = false
 
