--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,14 +1,13 @@
 [defaults]
-inventory = /root/Ansible/inventory
-remote_user = admin
-roles_path = /root/Ansible/roles
-collections_path = /root/Ansible/mycollection
-ask_pass = false
-host_key_checking = false
+inventory = ~/ansible/inventory
+remote_user = vagrant
+host_key_checking = True
+stdout_callback = yaml
+interpreter_python = /usr/bin/python3
+#private_key_file = ~/.ssh/ansible
 
 [privilege_escalation]
-become = true
+become = True
 become_method = sudo
 become_user = root
-become_ask_pass = false
-
+become_ask_pass = True
