--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,13 +1,12 @@
 [defaults]
-inventory = ~/ansible/inventory
+inventory = ~/ansible/hosts
 remote_user = vagrant
-host_key_checking = True
 stdout_callback = yaml
 interpreter_python = /usr/bin/python3
-#private_key_file = ~/.ssh/ansible
+private_key_file = ~/.ssh/ansible
 
 [privilege_escalation]
 become = True
 become_method = sudo
 become_user = root
-become_ask_pass = True
+become_ask_pass = False
